--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
                 <a class="btn btn-primary btn-lg" href="#" role="button">Go to Account</a>
             </div>
             <div class="heroCTA-learn-more">
-                    <a class="btn btn-primary btn-lg" href="#" role="button">Go to Homepage</a>
+                    <a class="btn btn-primary btn-lg" href="https://yixiaoli06.github.io/final-project-salary-coach-feature/" role="button">Go to Homepage</a>
             </div>
         </div>
     </div>
