--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 </head>
     <nav class="nav" style="background-color: #e3f2fd;">
         <ul class="ul">
-            <li class="li">
+            <li class="li" id="logo">
             <img src="images/Indeed_2021_Logo_RGB_Blue.png" style="width:130px; height:50px;" alt="indeed-logo-dark">
             </li>
             <li class="li">Find jobs
@@ -65,7 +65,7 @@
                 <a class="btn btn-primary btn-lg" href="#" role="button">Go to Account</a>
             </div>
             <div class="heroCTA-learn-more">
-                    <a class="btn btn-primary btn-lg" href="https://yixiaoli06.github.io/final-project-salary-coach-feature/" role="button">Go to Homepage</a>
+                    <a class="btn btn-primary btn-lg" id="alt-btn-style" href="https://yixiaoli06.github.io/final-project-salary-coach-feature/" role="button">Go to Homepage</a>
             </div>
         </div>
     </div>
